--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "vanilla",
+  "name": "three-js-playground",
   "version": "1.0.0",
-  "description": "JavaScript example starter project",
+  "description": "",
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
   },
-  "dependencies": { "parcel-bundler": "^1.6.1" },
+  "dependencies": {
+    "parcel-bundler": "^1.6.1",
+    "three": "0.139.0"
+  },
   "devDependencies": {
     "@babel/core": "7.2.0",
     "typescript": "4.4.4"
@@ -15,5 +18,5 @@
   "resolutions": {
     "@babel/preset-env": "7.13.8"
   },
-  "keywords": ["javascript", "starter"]
+  "keywords": []
 }
