--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
+    "dat.gui": "0.7.9",
     "parcel-bundler": "^1.6.1",
     "three": "0.139.0"
   },
