--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "dat.gui": "0.7.9",
+    "noisejs": "2.1.0",
     "parcel-bundler": "^1.6.1",
     "three": "0.139.0"
   },
